--- a/index.html
+++ b/index.html
@@ -25,10 +25,14 @@
         <section id="downloads" class="clearfix">
           <a href="https://github.com/dmitryon" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
+        <section
+        <a href="https://bmc.link/dmcyted" id="buy-me-a-coffe" class="button"><span>Buy me a coffee</span></a>
+        </section>
 
         <hr>
 
         <section id="main_content">
+          <details><summary><h3>Welcome to GitHub Pages.</h3></summary>
           <h3>Welcome to GitHub Pages.</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
@@ -55,6 +59,7 @@ $ git checkout gh-pages
 <h3>Support or Contact</h3>
 
 <p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+            </details>
         </section>
 
         <footer>
