--- a/index.html
+++ b/index.html
@@ -25,15 +25,14 @@
         <section id="downloads" class="clearfix">
           <a href="https://github.com/dmitryon" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
-        <section
-        <a href="https://bmc.link/dmcyted" id="buy-me-a-coffe" class="button"><span>Buy me a coffee</span></a>
+        <section>
+        <a href="https://bmc.link/dmcyted" id="buy-me-a-coffee" class="button"><span>Buy me a coffee</span></a>
         </section>
 
         <hr>
 
         <section id="main_content">
-          <details><summary><h3>Welcome to GitHub Pages.</h3></summary>
-          <h3>Welcome to GitHub Pages.</h3>
+          <details><summary>Welcome to GitHub Pages.</summary>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
