--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
                 <a href="#" class="button cc-copy-btn cc-trx-trc20" data-clipboard-target="#cc-trx-trc20-addr" data-clipboard-action="copy"><span>TRX (TRC20)</span></a>
                 <div id="cc-trx-trc20-addr">TYVYY8Zk1UAdx6vCL9Vu1zVz5k6jVem2u1</div>
             </div>
+            <div class="box">
+                <a href="#" class="button cc-copy-btn cc-sol" data-clipboard-target="#cc-sol-addr" data-clipboard-action="copy"><span>SOL</span></a>
+                <div id="cc-sol-addr">4SSvA285xjjXmqcw76qAq5U39RAvT2n3GZmsV7wRQtUG</div>
+            </div>
         </section>
 
         <footer>
